syntax = "proto3";

package events;

import "github.com/dappledger/AnnChain/angine/protos/types/types.proto";

enum EventType{
	EventNewBlock = 0;
	EventNewBlockHeader = 1;
	EventTx = 2;
	EventRoundState = 3;
	EventVote = 4;
	EventSwitchToConsensus = 5;
	EventHookNewRound = 6;
	EventHookPropose = 7;
	EventHookPrecommit = 8;
	EventHookCommit = 9;
	EventHookExecute = 10;
}

message EventDataNewBlock{
	types.Block Block = 1;
}

message EventDataNewBlockHeader{
	types.Header Header = 1;
}

message EventDataTx{
	bytes Tx = 1;
	bytes Data = 2;
	string Log = 3;
	types.CodeType Code = 4;
	string Error = 5;
}

message EventDataRoundState{
	int64 Height = 1;
	int64 Round = 2;
	string Step = 3;
	// RoundState is private	
}

message EventDataVote{
	types.Vote Vote = 1;
}
